grid text is aligned, added correct logos

--- a/src/styles/OurStory.module.css
+++ b/src/styles/OurStory.module.css
@@ -1,17 +1,21 @@
 .gridContainer {
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    max-width: 100%;
-    height: 100vh;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    
   }
-  
+
   .item {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 100%;
     justify-content: center;
   }
+
+#logo img{
+    padding-left: 16%;
+    width:70%;
+}
 
 .item p, .item h4 {
     text-align: center;
@@ -23,4 +27,9 @@
     height: 100%;
     object-fit: cover;
   }
-  
+  @media (min-width: 1200px) {
+    .gridContainer {
+    grid-template-columns: repeat(auto-fit, minmax(calc((100% - 2 * 7%) / 3), 1fr));
+    }
+
+  }
